# TaskA_CKurs

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt
src/control/: Game.cpp  Game.hpp  PlayerControl.cpp  PlayerControl.hpp
src/model/: Platform.cpp  Platform.hpp  Player.cpp  Player.hpp
